--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-avatar": "^3.9.7",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8"
   },
